tests/negative/syntax/reserved_keyword.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that reserved keywords (like 'class') cannot be used as variable names.

function main() {
    let class = 10; // Error: 'class' is a reserved keyword
    
    print(class);
}
